--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -3,13 +3,11 @@
 // @import "npm-font-open-sans/open-sans.scss"
 @use "@fontsource/roboto/scss/mixins" as Roboto
 
+@use 'vuetify'
+
 @include Roboto.fontFace($weight: 400, $fontDir: "@fontsource/roboto/files")
 @include Roboto.fontFace($weight: 500, $fontDir: "@fontsource/roboto/files")
 @include Roboto.fontFace($weight: 700, $fontDir: "@fontsource/roboto/files")
 
 *
   box-sizing: border-box
-
-a, a:visited, a:hover, a:active
-  color: inherit
-  text-decoration: none
